# vpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
etc/: rs  rs.cfg  webcam  webcam.cfg
inc/dscribe/: pipeline.hpp
inc/vpp/: coordinates.hpp  engine.hpp  error.hpp  image.hpp  kernel.hpp  logo.hpp  pipeline.hpp  prediction.hpp  projection.hpp  scene.hpp  stage.hpp  task.hpp  tracker.hpp  types.hpp  view.hpp  vlog.hpp  zone.hpp
inc/vpp/core/: engine.hpp  pipeline.hpp  stage.hpp  task.hpp
inc/vpp/dnn/: dataset.hpp  engine.hpp  ocv.hpp  setup.hpp
inc/vpp/engine/: blur.hpp  bridge.hpp  capture.hpp  clustering.hpp  overlay.hpp
inc/vpp/engine/classifier/: ocv.hpp
inc/vpp/engine/detector/: darknet.hpp  ocv.hpp
inc/vpp/engine/ocr/: edging.hpp  mser.hpp  tesseract.hpp
inc/vpp/engine/tracker/: camshift.hpp  history.hpp  kalman.hpp  none.hpp  ocv.hpp
inc/vpp/kernel/: camshift.hpp  histogram.hpp  kalman.hpp
inc/vpp/stage/: blur.hpp  clustering.hpp  dnn.hpp  input.hpp  overlay.hpp  tracker.hpp
inc/vpp/stage/ocr/: edging.hpp  mser.hpp  reader.hpp
inc/vpp/task/: blur.hpp  clustering.hpp  edging.hpp  matcher.hpp  motion.hpp  mser.hpp
inc/vpp/task/kernel/: histogram.hpp  kalman.hpp
inc/vpp/task/tracker/: histogram.hpp  kalman.hpp  ocv.hpp
inc/vpp/tracker/: histogram.hpp  kalman.hpp  ocv.hpp
inc/vpp/ui/: overlay.hpp
inc/vpp/util/: observability.hpp  task.hpp  templates.hpp  utf8.hpp
inc/vpp/util/io/: android_camera.hpp  image.hpp  input.hpp  opencv_capture.hpp  realsense.hpp
inc/vpp/util/ocv/: capture.hpp  coordinates.hpp  functions.hpp  overlay.hpp  projection.hpp
mk/: cmake-config-rules.mk  configure-file-rules.cmake  cxx-code-check-rules.cmake  cxx-code-format-rules.cmake  cxx-code-lint-rules.cmake  cxx-code-quality-rules.cmake  cxx-code-tidy-rules.cmake  doc-doxygen-rules.cmake
src/dscribe/: cli.cpp  pipeline.cpp
src/vpp/: engine.cpp  image.cpp  log.cpp  log.hpp  logo.cpp  pipeline.cpp  scene.cpp  stage.cpp  task.cpp  tracker.cpp  view.cpp  zone.cpp
src/vpp/core/: engine.tpl.hpp  pipeline.tpl.hpp  stage.tpl.hpp  task.tpl.hpp
src/vpp/dnn/: dataset.cpp  engine.cpp  ocv.cpp  setup.cpp
src/vpp/engine/: blur.cpp  bridge.cpp  capture.cpp  clustering.cpp  overlay.cpp
src/vpp/engine/classifier/: ocv.cpp
src/vpp/engine/detector/: darknet.cpp  ocv.cpp
src/vpp/engine/ocr/: edging.cpp  mser.cpp  tesseract.cpp
src/vpp/engine/tracker/: camshift.cpp  history.cpp  kalman.cpp  none.cpp  ocv.cpp
src/vpp/kernel/: histogram.cpp  kalman.cpp
src/vpp/stage/: blur.cpp  clustering.cpp  dnn.cpp  input.cpp  overlay.cpp  tracker.cpp
src/vpp/stage/ocr/: edging.cpp  mser.cpp  reader.cpp
src/vpp/task/: blur.cpp  clustering.cpp  edging.cpp  edging.cpp.orig  matcher.cpp  motion.cpp  mser.cpp
src/vpp/task/kernel/: histogram.cpp  kalman.cpp
src/vpp/task/tracker/: histogram.cpp  kalman.cpp  ocv.cpp
src/vpp/tracker/: histogram.cpp  kalman.cpp  ocv.cpp
src/vpp/ui/: overlay.cpp
src/vpp/util/: task.cpp  utf8.cpp
src/vpp/util/io/: android_camera.cpp  image.cpp  input.cpp  opencv_capture.cpp  realsense.cpp
src/vpp/util/ocv/: capture.cpp  functions.cpp  overlay.cpp
tpl/: Doxyfile.in  config.hpp.in  vpp.pc.in
